testdata/baselines/reference/submodule/compiler/reactSFCAndFunctionResolvable.errors.txt
reactSFCAndFunctionResolvable.tsx(3,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== reactSFCAndFunctionResolvable.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import * as React from 'react';
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    declare const Radio: (props: {}) => React.ReactElement<{}>;
    declare const OtherRadio: () => React.ReactElement<{}>;
    declare const Checkbox: React.SFC;
    
    declare const condition1: boolean;
    declare const condition2: boolean;
    declare const condition3: boolean;
    
    const RandomComponent: React.SFC = () => {
      const Component =
        condition1
          ? Radio
          : Checkbox;
    
      const OtherComponent =
        condition2
          ? OtherRadio
          : Checkbox;
      return condition1 ? <Component /> : <OtherComponent />;
    };
    